--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -77,7 +77,7 @@
 
     // 페이지 로드 시 실행
     document.addEventListener('DOMContentLoaded', function() {
-        addLineBreaks('#contentBox', 149); // 예: 10글자 마다 줄바꿈 추가
+        addLineBreaks('#contentBox', 149); // 10글자 마다 줄바꿈 추가
     });
 </script>
 </body>
