--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="layout/head :: head"></div>
 <title>Learning_Mate</title>
-<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}" />
+<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
 <div th:replace="layout/nav :: nav"></div>
@@ -14,107 +14,123 @@
         </div>
     </div>
 </header>
-            <section class="py-5">
-                <div class="container px-4 px-lg-5 mt-5">
-                    <h3 style="text-align: left; font-weight: bold">인기글🔥</h3><br>
-                    <!-- 상위 4개 인기글 표시 -->
-                    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                        <div th:each="list, stat : ${topBoard}" class="col mb-5">
-                            <div class="card h-100">
-                                <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
-                                <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
-                                    <div class="text-center">
-                                        <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
-                                        <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product Price</div>
-                                        <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product Price</div><br>
-                                        <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
-                                        <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
-                                            <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
-                                            <span th:text="${list.viewCount}"></span>
-                                        </div>
-                                    </div>
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <h3 style="text-align: left; font-weight: bold">인기글🔥</h3><br>
+        <!-- 상위 4개 인기글 표시 -->
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <div th:each="list, stat : ${topBoard}" class="col mb-5">
+                <div class="card h-100">
+                    <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
+                        <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
+                            <div class="text-center">
+                                <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
+                                <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product
+                                    Price
                                 </div>
-                                </a>
+                                <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product
+                                    Price
+                                </div>
+                                <br>
+                                <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
+                                <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
+                                    <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
+                                    <span th:text="${list.viewCount}"></span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
-                    <h3 style="text-align: left; font-weight: bold">전체 게시글</h3>
-                    <div class="select-container" style="position: relative; display: inline-block;">
-                        <select class="form-control" id="studyType" name="studyType" style="width: 130px; padding-right: 30px; font-size: 14px; font-weight: bold; -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;" onmouseover="this.style.color='gray'" onmouseout="this.style.color='black'">
-                            <option value="" disabled selected>진행 방식</option>
-                            <option value="ONLINE">전체</option>
-                            <option value="ONLINE">온라인</option>
-                            <option value="OFFLINE">오프라인</option>
-                            <option value="BOTH">온/오프라인</option>
-                        </select>
-                        <i class="bi bi-chevron-down" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); pointer-events: none;"></i>
-                    </div>&nbsp;
-
-                    <div class="select-container" style="position: relative; display: inline-block;">
-                        <select class="form-control" id="studySubject" name="studyType" style="width: 130px; padding-right: 30px; font-size: 14px; font-weight: bold; -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;" onmouseover="this.style.color='gray'" onmouseout="this.style.color='black'">
-                            <option value="" disabled selected>스터디 과목</option>
-                            <option value="A">A</option>
-                            <option value="B">B</option>
-                            <option value="C">C</option>
-                            <option value="D">D</option>
-                        </select>
-                        <i class="bi bi-chevron-down" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); pointer-events: none;"></i>
-                    </div>
-
-                    <input type="text" placeholder="🔍 검색어를 입력하세요" style="float: right; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;">
-
-                    <!--<li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                           style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
-                           onmouseover="this.style.color='gray'"
-                           onmouseout="this.style.color='black'">스터디 과목</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <li><a class="dropdown-item" href="#!">자유 게시판</a></li>
-                            <li><a class="dropdown-item" href="#!">HOT 게시글</a></li>
-                            <li><a class="dropdown-item" href="#!">취업·진로 게시판</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                           style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
-                           onmouseover="this.style.color='gray'"
-                           onmouseout="this.style.color='black'">진행 방식</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                            <li><a class="dropdown-item" href="#!">온라인</a></li>
-                            <li><a class="dropdown-item" href="#!">오프라인</a></li>
-                            <li><a class="dropdown-item" href="#!">온/오프라인</a></li>
-                        </ul>
-                    </li>-->
-                    <br><br>
-                    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                        <div th:each="list : ${allBoard}" class="col mb-5">
-                            <div class="card h-100">
-                                <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
-                                <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
-                                    <div class="text-center">
-                                        <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
-                                        <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product Price</div>
-                                        <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product Price</div>
-                                        <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
-                                        <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
-                                            <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
-                                            <span th:text="${list.viewCount}"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    </a>
                 </div>
-            </section>
-            <footer class="py-5 bg-dark">
-                <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
-            </footer>
-            <script src="/bootstrap/js/scripts.js"></script>
+            </div>
+        </div>
+
+        <h3 style="text-align: left; font-weight: bold">전체 게시글</h3>
+        <div class="select-container" style="position: relative; display: inline-block;">
+            <select class="form-control" id="studyType" name="studyType"
+                    style="width: 130px; padding-right: 30px; font-size: 14px; font-weight: bold; -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;"
+                    onmouseover="this.style.color='gray'" onmouseout="this.style.color='black'">
+                <option value="" disabled selected>진행 방식</option>
+                <option value="ONLINE">전체</option>
+                <option value="ONLINE">온라인</option>
+                <option value="OFFLINE">오프라인</option>
+                <option value="BOTH">온/오프라인</option>
+            </select>
+            <i class="bi bi-chevron-down"
+               style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); pointer-events: none;"></i>
+        </div>&nbsp;
+
+        <div class="select-container" style="position: relative; display: inline-block;">
+            <select class="form-control" id="studySubject" name="studyType"
+                    style="width: 130px; padding-right: 30px; font-size: 14px; font-weight: bold; -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;"
+                    onmouseover="this.style.color='gray'" onmouseout="this.style.color='black'">
+                <option value="" disabled selected>스터디 과목</option>
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+            </select>
+            <i class="bi bi-chevron-down"
+               style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); pointer-events: none;"></i>
+        </div>
+
+        <input type="text" placeholder="🔍 검색어를 입력하세요"
+               style="float: right; border-radius: 20px; border: 2px solid black; padding: 0.375rem 0.75rem;">
+
+        <!--<li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+               style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
+               onmouseover="this.style.color='gray'"
+               onmouseout="this.style.color='black'">스터디 과목</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                <li><a class="dropdown-item" href="#!">자유 게시판</a></li>
+                <li><a class="dropdown-item" href="#!">HOT 게시글</a></li>
+                <li><a class="dropdown-item" href="#!">취업·진로 게시판</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown" style="display: inline-block; margin-right: 5px;">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+               style="color:black; font-weight: bold; font-size: 0.9em; border: 1px solid gray; border-radius: 20px; padding: 5px 10px;"
+               onmouseover="this.style.color='gray'"
+               onmouseout="this.style.color='black'">진행 방식</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                <li><a class="dropdown-item" href="#!">온라인</a></li>
+                <li><a class="dropdown-item" href="#!">오프라인</a></li>
+                <li><a class="dropdown-item" href="#!">온/오프라인</a></li>
+            </ul>
+        </li>-->
+        <br><br>
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <div th:each="list : ${allBoard}" class="col mb-5">
+                <div class="card h-100">
+                    <a style="text-decoration: none;" th:href="@{/board/detail/{id}(id=${list.boardNo})}">
+                        <div class="card-body p-4" style="max-height: 300px; overflow-y: auto;">
+                            <div class="text-center">
+                                <h5 class="fw-bolder" th:text="${list.title}" style="color:black">Product Name</h5>
+                                <div th:text="${list.dueDate}" style="white-space: pre-line; color:black">Product
+                                    Price
+                                </div>
+                                <div th:text="${list.studySubject}" style="white-space: pre-line; color:black">Product
+                                    Price
+                                </div>
+                                <hr style="border-top: 1px solid dimgrey; margin-top: 10px; margin-bottom: 10px;">
+                                <div style="display: flex; align-items: center; justify-content: flex-end; color:black;">
+                                    <img src="/image/조회수.png" alt="조회수" style="width: 20px; height: 20px; ">
+                                    <span th:text="${list.viewCount}"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+</section>
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Learning_Mate 2024</p></div>
+</footer>
+<script src="/bootstrap/js/scripts.js"></script>
+</div>
+</div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
