--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="layout/head :: head"></div>
-<title>Learning_Mate</title>
-<link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<head>
+    <div th:replace="layout/head :: head"></div>
+    <title>Learning_Mate</title>
+    <link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
 <div th:replace="layout/nav :: nav"></div>
 <header class="bg-dark py-5">
