--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<div th:replace="layout/head :: head"></div>
 <head>
+    <div th:replace="layout/head :: head"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup - Learning Mate</title>
@@ -41,20 +41,26 @@
             border-radius: 5px;
             width: 100%;
         }
+        .error {
+            color: red;
+            font-size: 12px; /* 이 값을 조절하여 원하는 폰트 크기로 설정할 수 있습니다. */
+        }
     </style>
 </head>
 <body>
 <div class="signup-container">
     <h2 class="text-center mb-4">회원가입</h2>
-    <form class="signup-form" action="/register" method="post">
-        <input type="text" name="name" placeholder="이름" required autofocus>
-        <input type="email" name="email" placeholder="이메일" required>
-        <input type="password" name="password" placeholder="비밀번호" required>
-        <input type="password" name="confirmPassword" placeholder="비밀번호 확인" required>
+    <form class="signup-form" th:action="@{/user/join}" th:object="${joinRequest}"  method="post">
+        <div class="error" th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}">중복된 아이디입니다.</div>
+        <input type="text" placeholder="아이디" th:field="*{userId}" required autofocus>
+        <input type="password" placeholder="비밀번호" th:field="*{password}" required autofocus>
+        <input type="text" placeholder="이름" th:field="*{userName}" required autofocus>
+        <input type="email" placeholder="이메일" th:field="*{userEmail}" required autofocus>
+        <input type="text" placeholder="전화번호" th:field="*{userPhone}" required autofocus>
         <button type="submit">회원가입</button>
     </form>
     <div class="text-center mt-2">
-        <p>이미 계정이 있으신가요? <a href="/login" style="color: #4a00e0; text-decoration: none;">로그인</a></p>
+        <p>이미 계정이 있으신가요? <a href="/user/login" style="color: #4a00e0; text-decoration: none;">로그인</a></p>
     </div>
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
