--- a/src/main/resources/templates/layout/nav.html
+++ b/src/main/resources/templates/layout/nav.html
@@ -10,9 +10,15 @@
             <ul class="navbar-nav">
                 <li class="nav-item" style="font-weight: bold"><a class="nav-link" href="/board/write">글 작성</a></li>
             </ul>&nbsp;&nbsp;
-            <form class="d-flex">
-                <a href="/login" class="btn btn-outline-dark">Login</a>
-            </form>
+            <div th:if="${session.userName}">
+                <a href="/user/detail" class="btn btn-group-lg" th:text="${session.userName} + '님'"></a>
+                <a href="/user/logout" class="btn btn-outline-dark">logout</a>
+            </div>
+            <div th:unless="${session.userName}">
+                <form class="d-flex">
+                    <a href="/user/login" class="btn btn-outline-dark">Login</a>
+                </form>
+            </div>
         </div>
     </div>
 </nav>
