--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<div th:replace="layout/head :: head"></div>
 <head>
+    <div th:replace="layout/head :: head"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Learning Mate</title>
@@ -34,7 +34,7 @@
         .login-form button[type="submit"]:hover {
             background-color: #3e00c7;
         }
-        .login-form input[type="email"], .login-form input[type="password"] {
+        .login-form input[type="text"], .login-form input[type="password"] {
             border: 1px solid #ddd;
             margin-bottom: 20px;
             padding: 10px;
@@ -46,13 +46,13 @@
 <body>
 <div class="login-container">
     <h2 class="text-center mb-4">로그인</h2>
-    <form class="login-form" action="/login" method="post">
-        <input type="email" name="email" placeholder="이메일" required autofocus>
-        <input type="password" name="password" placeholder="비밀번호" required>
+    <form class="login-form" th:action th:object="${loginRequest}" method="post">
+        <input type="text" placeholder="아이디" th:field="*{userId}" required autofocus> <br>
+        <input type="password" placeholder="비밀번호" th:field="*{password}" required>
         <button type="submit">로그인</button>
     </form>
     <div class="text-center mt-2">
-        <p>계정이 없으신가요? <a href="/join" style="color: #4a00e0; text-decoration: none;">회원가입</a></p>
+        <p>계정이 없으신가요? <a href="/user/join" style="color: #4a00e0; text-decoration: none;">회원가입</a></p>
     </div>
 </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
