--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -1,9 +1,11 @@
 <head>
+    <title>Learning_Mate</title>
+    <link rel="stylesheet" th:href="@{/bootstrap/css/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning_Mate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="/bootstrap/css/styles.css" rel="stylesheet" />
+    <link href="/bootstrap/css/style.css" rel="stylesheet" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/bootstrap/assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
