--- a/src/main/resources/templates/layout/nav.html
+++ b/src/main/resources/templates/layout/nav.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a href="/">
-            <img src="/image/logo2.png" alt="Logo" style="width:2000px; height: 60px;">
-        </a>
+        <h2><a href="/" style="font-weight: bold; text-decoration: none; color: black;">Learning Mate</a></h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
